--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
+   <!-- <RelativeLayout
 
         android:layout_width="match_parent"
         android:layout_height="50dp">
@@ -54,7 +54,7 @@
             android:layout_weight="2"
             android:text="Remove Geofence" />
     </LinearLayout>
-
+-->
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
