--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -59,7 +59,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MapsActivity">
+        tools:context=".Admin.MapsActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -100,7 +100,7 @@
         android:layout_marginEnd="88dp"
         android:background="#212121"
         android:padding="8dp"
-        android:text="Share"
+        android:text="Tambahkan Marker"
         android:textColor="#ffffff"
         android:visibility="invisible" />
 
@@ -131,7 +131,7 @@
         android:layout_marginEnd="88dp"
         android:background="#212121"
         android:padding="8dp"
-        android:text="Email"
+        android:text="Refresh"
         android:textColor="#ffffff"
         android:visibility="invisible" />
 
