--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="186dp"
+        android:layout_marginBottom="216dp"
         android:layout_marginEnd="88dp"
         android:background="#212121"
         android:padding="8dp"
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="176dp"
+        android:layout_marginBottom="206dp"
         android:layout_marginEnd="24dp"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
@@ -127,11 +127,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="116dp"
+        android:layout_marginBottom="146dp"
         android:layout_marginEnd="88dp"
         android:background="#212121"
         android:padding="8dp"
-        android:text="Refresh"
+        android:text="Email"
         android:textColor="#ffffff"
         android:visibility="invisible" />
 
@@ -142,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="106dp"
+        android:layout_marginBottom="136dp"
         android:layout_marginEnd="24dp"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
@@ -159,7 +159,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="62dp"
         android:layout_marginEnd="24dp"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
