--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,275 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <!--<RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:entries="@array/spinner_method_geofence" />
-    </RelativeLayout
->
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp">
-
-        <TextView
-            android:id="@+id/s"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:text="Radius" />
-
-        <android.support.v7.widget.AppCompatSeekBar
-            android:id="@+id/a"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp" />
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
-
-        <Button
-            android:id="@+id/startGeofence"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Start Geofence" />
-
-        <Button
-            android:id="@+id/removeGeofence"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Remove Geofence" />
-    </LinearLayout>-->
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/mainMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Admin.MapsActivity">
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarAdmin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
-                android:layout_width="wrap_content"
-                android:layout_height="410dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="150dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="8dp">
-
-                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
-                    android:id="@+id/verticalSeekbar"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:max="15"
-                    android:progress="12"
-                    android:splitTrack="false"
-                    app:seekBarRotation="CW270" />
-
-            </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
-
-        </RelativeLayout>
-
-    </fragment>
-    <TextView
-        android:id="@+id/textview_User"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="356dp"
-        android:layout_marginEnd="88dp"
-        android:background="#212121"
-        android:padding="8dp"
-        android:text="User View"
-        android:textColor="#ffffff"
-        android:visibility="invisible" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2_User"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="346dp"
-        android:layout_marginEnd="24dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:elevation="16dp"
-        android:focusable="true"
-        android:visibility="invisible"
-        app:backgroundTint="#ffffff"
-        app:pressedTranslationZ="12dp"
-        app:srcCompat="@drawable/button_action" />
-    <TextView
-        android:id="@+id/textview_titik"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="286dp"
-        android:layout_marginEnd="88dp"
-        android:background="#212121"
-        android:padding="8dp"
-        android:text="Tambahkan Titik"
-        android:textColor="#ffffff"
-        android:visibility="invisible" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2_titik"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="276dp"
-        android:layout_marginEnd="24dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:elevation="16dp"
-        android:focusable="true"
-        android:visibility="invisible"
-        app:backgroundTint="#ffffff"
-        app:pressedTranslationZ="12dp"
-        app:srcCompat="@drawable/button_action" />
-
-    <TextView
-        android:id="@+id/textview_share"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="216dp"
-        android:layout_marginEnd="88dp"
-        android:background="#212121"
-        android:padding="8dp"
-        android:text="Tambahkan Marker"
-        android:textColor="#ffffff"
-        android:visibility="invisible" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="206dp"
-        android:layout_marginEnd="24dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:elevation="16dp"
-        android:focusable="true"
-        android:visibility="invisible"
-        app:backgroundTint="#ffffff"
-        app:pressedTranslationZ="12dp"
-        app:srcCompat="@drawable/button_action" />
-
-    <TextView
-        android:id="@+id/textview_mail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="146dp"
-        android:layout_marginEnd="88dp"
-        android:background="#212121"
-        android:padding="8dp"
-        android:text="Refresh"
-        android:textColor="#ffffff"
-        android:visibility="invisible" />
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="136dp"
-        android:layout_marginEnd="24dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:elevation="16dp"
-        android:focusable="true"
-        android:visibility="invisible"
-        app:backgroundTint="#ffffff"
-        app:pressedTranslationZ="12dp"
-        app:srcCompat="@drawable/button_action" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="62dp"
-        android:layout_marginEnd="24dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:elevation="16dp"
-        android:focusable="true"
-        android:visibility="visible"
-        app:backgroundTint="#ffffff"
-        app:pressedTranslationZ="12dp"
-        app:srcCompat="@drawable/button_action" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+           />
 
 
 
+        <fragment
+            android:id="@+id/mapAdmin"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbarAdmin"
+            tools:context=".Admin.MapsActivity">
 
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/collapse"
-        android:layout_alignParentBottom="true"
-        android:paddingBottom="20dp"
-        android:background="#ffffff"
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/relative"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
+                    android:layout_width="wrap_content"
+                    android:layout_height="410dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="150dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="8dp">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/verticalSeekbar"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="15"
+                        android:progress="12"
+                        android:splitTrack="false"
+                        app:seekBarRotation="CW270" />
+
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
+
+            </RelativeLayout>
+
+        </fragment>
         <TextView
-            android:id="@+id/radius"
-            android:layout_width="match_parent"
+            android:id="@+id/textview_User"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:text="Radius" />
-
-        <android.support.v7.widget.AppCompatSeekBar
-            android:id="@+id/seekbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="88dp"
+            android:layout_marginBottom="356dp"
+            android:background="#212121"
+            android:padding="8dp"
+            android:text="User View"
+            android:textColor="#ffffff"
+            android:visibility="invisible" />
 
         <TextView
-
-            android:layout_marginTop="15dp"
-            android:id="@+id/meter"
-            android:layout_width="match_parent"
+            android:id="@+id/textview_titik"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10sp"
-            android:text="100 meter" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="88dp"
+            android:layout_marginBottom="286dp"
+            android:background="#212121"
+            android:padding="8dp"
+            android:text="Tambahkan Titik"
+            android:textColor="#ffffff"
+            android:visibility="invisible" />
 
-        <Spinner
+        <TextView
+            android:id="@+id/textview_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="88dp"
+            android:layout_marginBottom="216dp"
+            android:background="#212121"
+            android:padding="8dp"
+            android:text="Tambahkan Marker"
+            android:textColor="#ffffff"
+            android:visibility="invisible" />
 
-            android:layout_marginLeft="10sp"
-            android:layout_marginTop="15dp"
-            android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:entries="@array/spinner_method_geofence" />
-    </LinearLayout>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textview_mail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="88dp"
+            android:layout_marginBottom="146dp"
+            android:background="#212121"
+            android:padding="8dp"
+            android:text="Refresh"
+            android:textColor="#ffffff"
+            android:visibility="invisible" />
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab2_User"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="346dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:elevation="16dp"
+            android:focusable="true"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:pressedTranslationZ="12dp"
+            app:srcCompat="@drawable/button_action" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab2_titik"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="276dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:elevation="16dp"
+            android:focusable="true"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:pressedTranslationZ="12dp"
+            app:srcCompat="@drawable/button_action" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="206dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:elevation="16dp"
+            android:focusable="true"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:pressedTranslationZ="12dp"
+            app:srcCompat="@drawable/button_action" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="136dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:elevation="16dp"
+            android:focusable="true"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:pressedTranslationZ="12dp"
+            app:srcCompat="@drawable/button_action" />
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="62dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:elevation="16dp"
+            android:focusable="true"
+            android:visibility="visible"
+            app:backgroundTint="#ffffff"
+            app:pressedTranslationZ="12dp"
+            app:srcCompat="@drawable/button_action" />
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/menu_main"
+        tools:openDrawer="start" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
