--- a/app/src/main/res/layout/activity_add_new_map.xml
+++ b/app/src/main/res/layout/activity_add_new_map.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.UI.AddNewMap">
+    tools:context=".Admin.UI.Activity.AddNewMapActivity">
 
     <fragment
         android:id="@+id/maps"
