--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -73,48 +73,33 @@
             app:layout_constraintTop_toBottomOf="@+id/area"
             app:layout_constraintVertical_bias="0.01999998" />
 
-        <Button
-            android:id="@+id/btnTambahFavMovie"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/holo_green_light"
-
-            android:text="add To Favorite"
-            android:textSize="10sp"
-            android:visibility="gone"
+        <TextView
+            android:id="@+id/latitude"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/area"
+            android:gravity="center_horizontal"
+            android:text="lat"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.65"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintStart_toEndOf="@+id/cardImage"
+            app:layout_constraintTop_toBottomOf="@+id/address"
+            app:layout_constraintVertical_bias="0.19999999" />
 
-        <Button
-            android:id="@+id/btndeleteFavMovie"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@android:color/holo_blue_bright"
-            android:text="delete Favorite"
-            android:textSize="10sp"
-            android:visibility="gone"
+        <TextView
+            android:id="@+id/longitude"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/area"
+            android:gravity="center_horizontal"
+            android:text="long"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.65"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintStart_toEndOf="@+id/cardImage"
+            app:layout_constraintTop_toBottomOf="@+id/address"
+            app:layout_constraintVertical_bias="0.81" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
