--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,6 +68,17 @@
         app:layout_constraintTop_toBottomOf="@+id/loginpassword"
         app:layout_constraintVertical_bias="0.07999998" />
 
+    <TextView
+        android:id="@+id/buatAkun"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="buat akun"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
+        app:layout_constraintVertical_bias="0.0" />
+
     <ProgressBar
         android:id="@+id/progressLogin"
         android:layout_width="wrap_content"
