--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -9,14 +9,9 @@
     android:gravity="bottom">
 
     <TextView
+        android:id="@+id/nama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Geofence"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Admin View"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
 </LinearLayout>
