--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,6 +16,10 @@
             android:title="Daftar Area " />
 
         <item
+            android:id="@+id/editUser"
+            android:icon="@drawable/location_item"
+            android:title="Edit User " />
+        <item
             android:id="@+id/logout"
             android:icon="@drawable/location_item"
             android:title="Logout " />
